--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             Hello J, I just trying to make our homepage.
             I don't know when I show this page to you.
             Nonetheless, I hope to show you haha.
+            I love you forever my babe.
         </p>
         <p>
             <div id="disqus_thread"></div>
